--- a/Aplicacao_Interativa/Views/Login/EsqueciSenha.cshtml
+++ b/Aplicacao_Interativa/Views/Login/EsqueciSenha.cshtml
@@ -18,15 +18,25 @@
         </div>
 }
 
-<h1 class="text-center">Acesse o seu perfil</h1>
-<form asp-controller="Login" asp-action="EsqueciSenha" method="post">
-  <div class="mb-3">
-    <label for="email">E-mail</label>
-    <input type="email" asp-for="Email" required class="form-control" placeholder="Digite seu e-mail"/>   
+<head>
+  <link rel="stylesheet" href="/css/recuperar.css">
+</head>
+
+  <div class="recuperar">
+
+    <h2>Recuperação de Senha</h2>
+    <form asp-controller="Login" asp-action="EsqueciSenha" method="post">
+        <div class="mb-3">
+            <label for="email">E-mail</label>
+            <input type="email" asp-for="Email" id="email" required placeholder="Digite seu e-mail"/>   
+        </div>
+
+        <input type="submit" value="Redefinir Senha">
+        <a type="submit" asp-controller="Login" asp-action="Index">Voltar</a>
+    </form>
+
   </div>
-
-  <button type="submit" class="btn btn-primary btn-block w-100 my-1">Redefinir Senha</button>
-  <a class="btn btn-secondary btn-block w-100 my-1" role="button" asp-controller="Login" asp-action="Index">Voltar</a>
-
-</form>
+<footer><script src="footer.js"></script></footer> 
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
