--- a/Aplicacao_Interativa/Views/Login/EsqueciSenha.cshtml
+++ b/Aplicacao_Interativa/Views/Login/EsqueciSenha.cshtml
@@ -20,6 +20,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/recuperar.css">
+   <link rel="stylesheet" href="/css/style.css">
 </head>
 
   <div class="recuperar">
@@ -31,12 +32,11 @@
             <input type="email" asp-for="Email" id="email" required placeholder="Digite seu e-mail"/>   
         </div>
 
-        <input type="submit" value="Redefinir Senha">
+        <input type="submit" value="Enviar">
         <a type="submit" asp-controller="Login" asp-action="Index">Voltar</a>
     </form>
 
   </div>
-<footer><script src="footer.js"></script></footer> 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
