--- a/Aplicacao_Interativa/Views/Login/RedefinirSenha.cshtml
+++ b/Aplicacao_Interativa/Views/Login/RedefinirSenha.cshtml
@@ -11,23 +11,25 @@
                         </div>  
 }
 
-<h1 class="text-center">Redefina sua nova senha</h1>
-<form asp-controller="Login" asp-action="RedefinirSenha" onsubmit="return validarFormulario()">
-    <input type="hidden" asp-for="Token"/>
+<head>
+    <link rel="stylesheet" href="/css/recuperar.css">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 
-    <div class="mb-3">
-        <label for="email">E-mail</label>
-        <input type="email" asp-for="Email" required class="form-control" placeholder="Digite seu e-mail"/>   
-    </div>
-    <div class="mb-3">
-        <label for="senha">Senha</label>
-        <input type="password" id="NovaSenha" asp-for="NovaSenha" required class="form-control" placeholder="Digite sua senha"/>
-    </div>
-    <div class="mb-3">
-        <label for="confirmarSenha">Confirmar Senha</label>
-        <input type="password" id="ConfirmarSenha" asp-for="ConfirmarSenha" required class="form-control" placeholder="Confirme sua senha"/>
-        <span id="erroSenha" class="erro-mensagem"></span> 
-    </div>
+<div class="recuperar">
+    <h2>Redefina sua nova senha</h2>
+    <form asp-controller="Login" asp-action="RedefinirSenha" method="post" onsubmit="return validarFormulario()">
+        <input type="hidden" asp-for="Usuario" value="@Model.Usuario" />
+        <div class="mb-3">
+            <input type="password" asp-for="NovaSenha" id="NovaSenha" required class="btn-password" placeholder="Digite sua senha" />
+        </div>
+        <div class="mb-3">
+            <input type="password" asp-for="ConfirmarSenha" id="ConfirmarSenha" required class="btn-password" placeholder="Confirme sua senha" />
+            <span id="erroSenha" class="erro-mensagem"></span>
+        </div>
+        <input type="submit" value="Redefinir">
+    </form>
+</div>
 
-    <button type="submit" class="btn btn-primary btn-block w-100 my-1">Redefinir</button>
-</form>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
