--- a/Aplicacao_Interativa/wwwroot/css/site.css
+++ b/Aplicacao_Interativa/wwwroot/css/site.css
@@ -36,6 +36,14 @@ body {
     border: none;
 }
 
+.btn-password {
+    width: 100% !important;
+    padding: 10px !important;
+    margin-bottom: 10px !important;
+    border: 1px solid #ccc !important;
+    border-radius: 5px !important;
+}
+
 /*Agendar.cshtml*/
 .selected {
     background-color: #007bff;
